src/test/deca/context/valid/return_param.deca
// Description:
//    Test d'un return sur des paramètres
//
// Résultats:
//    ok
//
// Historique:
//    créé le 21/01/2017

class A {
  int getInt(int a) {
    return a;
  }
  float getFloat(float a) {
    return a;
  }
  boolean getBool(boolean b) {
    return b;
  }
}
